--- a/.env_example
+++ b/.env_example
@@ -2,6 +2,10 @@
 NGINX_PORT=80
 NGINX_PORT_SSL=443
 
+APP_DOMAIN=PUT_DOMAIN_HERE
+FULLCHAIN_PATH=/etc/letsencrypt/live/${APP_DOMAIN}/fullchain.pem
+PRIVKEY_PATH=/etc/letsencrypt/live/${APP_DOMAIN}/privkey.pem
+
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
@@ -14,9 +18,7 @@ DB_SSL_CA=
 DB_SSL_CERT=
 DB_SSL_KEY=
 
-APP_DOMAIN=PUT_DOMAIN_HERE
-
-APP_NAME=Laravel
+APP_NAME=game_template
 APP_ENV=local
 APP_KEY=base64:RbH37L9hLJFYDCZ5dmKvE6hTkultoQmIvQ/gSHTJdzQ=
 APP_DEBUG=true
