--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,13 @@ services:
     volumes:
       - ./docker/nginx/default.conf.template:/etc/nginx/templates/default.conf.template:ro
       - ./docker/laravel:/var/www/html
-      - ${FULLCHAIN_PATH}:/etc/letsencrypt/live/${APP_DOMAIN}/fullchain.pem
-      - ${PRIVKEY_PATH}:/etc/letsencrypt/live/${APP_DOMAIN}/privkey.pem
+      - ${FULLCHAIN_PATH}:/etc/letsencrypt/live/domain/fullchain.pem
+      - ${PRIVKEY_PATH}:/etc/letsencrypt/live/domain/privkey.pem
     environment:
       - APP_DOMAIN=${APP_DOMAIN}
       - FULLCHAIN_PATH=${FULLCHAIN_PATH}
       - PRIVKEY_PATH=${PRIVKEY_PATH}
-    entrypoint: /bin/sh -c "envsubst '\$APP_DOMAIN' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+    entrypoint: /bin/sh -c "envsubst '\$APP_DOMAIN \$FULLCHAIN_PATH \$PRIVKEY_PATH' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
     depends_on:
       - laravel_app
     networks:
@@ -25,15 +25,16 @@ services:
     build:
       context: ./docker/laravel
     container_name: laravel_app
+    working_dir: /var/www/html
     volumes:
+      - ./docker/laravel/.my.cnf:/etc/mysql/my.cnf
       - ./docker/laravel:/var/www/html
-      - ./docker/laravel/.my.cnf:/etc/mysql/my.cnf/
+      - laravel_public_build:/var/www/html/public/build
     environment:
       - APP_ENV=local
-    networks: 
+    networks:
       - app-network
-    entrypoint: ["php-fpm", "-F"] 
-    command: sh -c "composer install --no-interaction --optimize-autoloader"
+    command: sh -c "composer install --no-interaction --optimize-autoloader && php-fpm -F"
     
   composer:
     image: composer:2.8
@@ -63,20 +64,25 @@ services:
       
   node:
     image: node:20
-    build:
-      context: ./docker/node/
-      dockerfile: ./Dockerfile
-    container_name: node
     volumes:
       - ./docker/laravel:/var/www/html
+      - laravel_public_build:/var/www/html/public/build
+    build:
+      context: ./
+      dockerfile: ./docker/node/Dockerfile
+    working_dir: /var/www/html
+    container_name: node
     environment:
       - VITE_APP_URL=${VITE_APP_URL}
-    command: sh -c "npm install && npm run build"
     ports:
       - "5173:5173"
     networks:
       - app-network
+    command: sh -c "tail -f /dev/null"
 
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  laravel_public_build:
