--- a/docker/nginx/default.conf.template
+++ b/docker/nginx/default.conf.template
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name ${APP_DOMAIN};
+    server_name $APP_DOMAIN;
 
     return 301 https://$host$request_uri;
 }
@@ -9,15 +9,15 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name ${APP_DOMAIN};
+    server_name $APP_DOMAIN;
     
     root /var/www/html/public;
     index index.php;
     
     charset utf-8;
     
-    ssl_certificate     /etc/letsencrypt/live/${APP_DOMAIN}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${APP_DOMAIN}/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/domain/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/domain/privkey.pem;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
