--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -1,5 +1,12 @@
-FROM node:20-alpine
+FROM node:alpine
 
-COPY --from=php:8.2-fpm /var/www/html/package*.json ./
+WORKDIR /var/www/html
+COPY ./docker/laravel/package*.json ./
+
+COPY ./docker/laravel ./
+
+RUN npm install
 
 EXPOSE 5173
+
+CMD [ "npm","run", "build" ]
