--- a/docker/nginx/default.conf.template
+++ b/docker/nginx/default.conf.template
@@ -22,6 +22,13 @@ server {
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
     
+    location /build/ {
+        alias /var/www/html/public/build/;
+        access_log off;
+        expires max;
+        add_header Cache-Control "public";
+    }
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
