--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,33 @@
 services:
-  nginx:
-    image: nginx:latest
-    container_name: nginx
-    ports:
-      - "${NGINX_PORT:-80}:80"
-      - "${NGINX_PORT_SSL:-443}:443"
-    volumes:
-      - ./docker/nginx/default.conf.template:/etc/nginx/templates/default.conf.template:ro
-      - ./docker/laravel:/var/www/html
-      - ${FULLCHAIN_PATH}:/etc/letsencrypt/live/domain/fullchain.pem
-      - ${PRIVKEY_PATH}:/etc/letsencrypt/live/domain/privkey.pem
-    environment:
-      - APP_DOMAIN=${APP_DOMAIN}
-      - FULLCHAIN_PATH=${FULLCHAIN_PATH}
-      - PRIVKEY_PATH=${PRIVKEY_PATH}
-    entrypoint: /bin/sh -c "envsubst '\$APP_DOMAIN \$FULLCHAIN_PATH \$PRIVKEY_PATH' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
-    depends_on:
-      - laravel_app
-    networks:
-      - app-network
+  # nginx:
+  #   image: nginx:latest
+  #   container_name: nginx
+  #   ports:
+  #     - "${NGINX_PORT:-80}:80"
+  #     - "${NGINX_PORT_SSL:-443}:443"
+  #   volumes:
+  #     - ./docker/nginx/default.conf.template:/etc/nginx/templates/default.conf.template:ro
+  #     - ./docker/laravel:/var/www/html
+  #     - ${FULLCHAIN_PATH}:/etc/letsencrypt/live/domain/fullchain.pem
+  #     - ${PRIVKEY_PATH}:/etc/letsencrypt/live/domain/privkey.pem
+  #   environment:
+  #     - APP_DOMAIN=${APP_DOMAIN}
+  #     - FULLCHAIN_PATH=${FULLCHAIN_PATH}
+  #     - PRIVKEY_PATH=${PRIVKEY_PATH}
+  #   entrypoint: /bin/sh -c "envsubst '\$APP_DOMAIN \$FULLCHAIN_PATH \$PRIVKEY_PATH' < /etc/nginx/templates/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+  #   depends_on:
+  #     - laravel_app
+  #   networks:
+  #     - app-network
 
   laravel_app:
-    image: php:8.2-fpm
+    image: php:8.2-cli
     build:
       context: ./docker/laravel
     container_name: laravel_app
     working_dir: /var/www/html
+    ports:
+      - "${APP_PORT:-8000}:8000"
     volumes:
       - ./docker/laravel/.my.cnf:/etc/mysql/my.cnf
       - ./docker/laravel:/var/www/html
@@ -34,7 +36,7 @@ services:
       - APP_ENV=local
     networks:
       - app-network
-    command: sh -c "composer install --no-interaction --optimize-autoloader && php-fpm -F"
+    command: sh -c "composer install --no-interaction --optimize-autoloader && composer require laravel/octane && php artisan octane:install --server=swoole && php artisan octane:start --server=swoole --host=0.0.0.0 --port=8000"
     
   composer:
     image: composer:2.8
