--- a/docker/laravel/Dockerfile
+++ b/docker/laravel/Dockerfile
@@ -1,13 +1,15 @@
-FROM php:8.2-fpm
+FROM php:8.2-cli
 
 RUN apt update \
     && apt install -y default-mysql-client git unzip libzip-dev libonig-dev libxml2-dev \
-    && docker-php-ext-install pdo_mysql mysqli \
+    && docker-php-ext-install pdo_mysql mysqli pcntl \
     && rm -rf /var/lib/apt/lists/*
-    
+
 WORKDIR /var/www/html
-COPY ./ ./ 
+COPY ./ ./
 
 COPY --from=composer:2.8 /usr/bin/composer /usr/bin/composer
 
 RUN chown -R www-data:www-data /var/www/html
+
+EXPOSE 8000
