--- a/docker/laravel/Dockerfile
+++ b/docker/laravel/Dockerfile
@@ -1,15 +1,38 @@
+
 FROM php:8.2-cli
 
-RUN apt update \
-    && apt install -y default-mysql-client git unzip libzip-dev libonig-dev libxml2-dev \
-    && docker-php-ext-install pdo_mysql mysqli pcntl \
+WORKDIR /var/www/html
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    git \
+    curl \
+    libpng-dev \
+    libonig-dev \
+    libxml2-dev \
+    libzip-dev \
+    zip \
+    unzip \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /var/www/html
-COPY ./ ./
+# Install PHP extensions
+RUN docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
 
-COPY --from=composer:2.8 /usr/bin/composer /usr/bin/composer
+# Install Composer
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-RUN chown -R www-data:www-data /var/www/html
+# Copy application files
+COPY . .
+
+# Install dependencies first
+RUN composer install --no-dev --optimize-autoloader --no-interaction
+
+# Install Swoole via PECL
+RUN pecl install swoole && docker-php-ext-enable swoole
+
+# Install Laravel Octane
+RUN composer require laravel/octane
 
 EXPOSE 8000
+
+CMD ["php", "artisan", "octane:start", "--server=swoole", "--host=0.0.0.0", "--port=8000"]
