--- a/docker/laravel/Dockerfile
+++ b/docker/laravel/Dockerfile
@@ -2,7 +2,10 @@ FROM php:8.2-cli
 
 RUN apt update \
     && apt install -y default-mysql-client git unzip libzip-dev libonig-dev libxml2-dev \
+       libcurl4-openssl-dev libssl-dev \
     && docker-php-ext-install pdo_mysql mysqli pcntl \
+    && pecl install swoole \
+    && docker-php-ext-enable swoole \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /var/www/html
