--- a/docker/laravel/.env.example
+++ b/docker/laravel/.env.example
@@ -20,12 +20,16 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=db
+DB_DATABASE=game_template
+DB_USERNAME=laravel_user
+DB_PASSWORD=laravel_pass
+DB_ROOT_PASSWORD=root_pass
+DB_SSLMODE=DISABLED
+DB_SSL_CA=
+DB_SSL_CERT=
+DB_SSL_KEY=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
