Update .env examples: configure URLs, trusted proxies, HTTPS, and Octane settings.

--- a/.env_example
+++ b/.env_example
@@ -5,7 +5,9 @@ DB_PORT=3306
 REDIS_PORT=6379
 MAIL_PORT=2525
 
-APP_DOMAIN=PUT_DOMAIN_HERE
+OCTANCE_SERVER=swoole
+
+APP_DOMAIN=https://seahorse-magnetic-officially.ngrok.app/api/web
 FULLCHAIN_PATH=/etc/letsencrypt/live/${APP_DOMAIN}/fullchain.pem
 PRIVKEY_PATH=/etc/letsencrypt/live/${APP_DOMAIN}/privkey.pem
 
