--- a/docker/laravel/.env.example
+++ b/docker/laravel/.env.example
@@ -2,7 +2,13 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://seahorse-magnetic-officially.ngrok.app/api/web
+
+# Trusted Proxies
+TRUSTED_PROXIES=*
+
+# Force HTTPS
+ASSET_URL=https://seahorse-magnetic-officially.ngrok.app/api/web
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
