Update .env example: add default APP_KEY value for local development.

--- a/docker/laravel/.env.example
+++ b/docker/laravel/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:RbH37L9hLJFYDCZ5dmKvE6hTkultoQmIvQ/gSHTJdzQ=
 APP_DEBUG=true
 APP_URL=https://seahorse-magnetic-officially.ngrok.app/api/web
 
